--- a/packages/melody-hooks/package.json
+++ b/packages/melody-hooks/package.json
@@ -11,9 +11,11 @@
     "author": "",
     "license": "Apache-2.0",
     "peerDependencies": {
-        "melody-idom": "^1.1.0"
+        "melody-idom": "^1.1.0",
+        "melody-component": "^1.1.0"
     },
     "devDependencies": {
+        "redux": "^4.0.1",
         "rollup-plugin-babel": "^2.6.1"
     }
 }
