--- a/packages/melody-idom/package.json
+++ b/packages/melody-idom/package.json
@@ -15,6 +15,8 @@
     "lodash": "^4.12.0"
   },
   "devDependencies": {
+    "melody-component": "^1.2.0-0",
+    "melody-hooks": "^1.2.0-0",
     "redux": "^4.0.1",
     "rollup-plugin-babel": "^2.6.1"
   }
